fix: load classpath resource via InputStream to support nested JAR
- Replace ResourceUtils.getFile() with resource.getInputStream() in
  SearchServiceImpl.loadClassPathResource() to fix FileNotFoundException
  when running as a Spring Boot fat JAR
- Update Dockerfile base image to eclipse-temurin:11-jre (ARM compatible)
- Add docker-compose.yml for MySQL profile deployment